# luca

./: .env.example  Dockerfile  main.py  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy.yml
app/: auth.py  main.py  whatsapp_utils.py
scripts/: sync_secrets_to_gcp.sh
